--- a/projects/icc/d3/src/d3.component.scss
+++ b/projects/icc/d3/src/d3.component.scss
@@ -1,38 +1,6 @@
-icc-d3 {
+:host {
   display: flex;
-  flex: 1;
-
-  svg {
-    flex: 1;
-  }
-
-  .line {
-    fill: none;
-  }
-
-  .zoom {
-    fill: none;
-    pointer-events: all;
-  }
-
-  .axis line {
-    fill: none;
-    stroke: #bfbfbf;
-    shape-rendering: crispEdges;
-  }
-
-  .drawlabel,
-  .guideLine {
-    pointer-events: none;
-  }
-
-  .guideLine {
-    fill: none;
-    stroke: #bfbfbf;
-    shape-rendering: crispEdges;
-  }
-
-  .bulletChartSvg .xAxisDraw .domain {
-    stroke-opacity: 0;
-  }
+  flex-direction: column;
+  width: 100%;
+  height: -webkit-fill-available;
 }
