--- a/projects/icc-demo/src/app/examples/d3/demos/line-chart-demo.component.html
+++ b/projects/icc-demo/src/app/examples/d3/demos/line-chart-demo.component.html
@@ -1,4 +1,4 @@
-<icc-d3 [chartConfigs]="chartConfigs3" [data]="data"></icc-d3>
+<icc-d3 [d3Config]="d3Config" [chartConfigs]="chartConfigs3" [data]="data"></icc-d3>
 
 <!--
 
