--- a/projects/icc/d3/src/d3.component.html
+++ b/projects/icc/d3/src/d3.component.html
@@ -5,15 +5,11 @@
 </ng-container>
 <!--
 
-<ng-container *ngIf="gridConfig$ | async as gridConfig">
-  <ng-container *ngIf="columnsConfig$ | async as columns">
-    <div class="icc-grid-toolbar">
-      <button (click)="refresh()">Refresh</button>
-      <button (click)="clearFilters()">Clear All Filters</button>
-    </div>
-    <icc-grid-view [gridConfig]="gridConfig" [columns]="columns"> </icc-grid-view>
-
-    <icc-grid-footer [gridConfig]="gridConfig"> </icc-grid-footer>
+<ng-container *ngIf="d3Config$ | async as d3Config">
+  <ng-container *ngIf="chartConfigs$ | async as chartConfigs">
+    <ng-container *ngIf="data$ | async as data">
+    <icc-d3-view [chartConfigs]="chartConfigs" [data]="data"></icc-d3-view>
   </ng-container>
+</ng-container>
 </ng-container>
 -->
