--- a/projects/icc-demo/src/app/examples/d3/demos/line-chart-demo.component.html
+++ b/projects/icc-demo/src/app/examples/d3/demos/line-chart-demo.component.html
@@ -1,4 +1,11 @@
-<icc-d3 [d3Config]="d3Config"></icc-d3>
+<div style="height: 100%; display: flex">
+  <icc-d3 [d3Config]="d3Config1" [chartConfigs]="chartConfigs1" [data]="data"></icc-d3>
+  <icc-d3 [d3Config]="d3Config2" [chartConfigs]="chartConfigs2" [data]="data"></icc-d3>
+</div>
+<div style="height: 100%; display: flex; margin-top: 20px">
+  <icc-d3 [chartConfigs]="chartConfigs3" [data]="data"></icc-d3>
+  <icc-d3 [chartConfigs]="chartConfigs4" [data]="data"></icc-d3>
+</div>
 
 <!--
 
@@ -11,4 +18,6 @@
   <icc-d3 [chartConfigs]="chartConfigs4" [dataSource]="data"></icc-d3>
 </div>
 
+
+<icc-d3 [d3Config]="d3Config"></icc-d3>
 -->
