--- a/projects/icc/layout/src/layout.component.html
+++ b/projects/icc/layout/src/layout.component.html
@@ -1,6 +1,6 @@
 <ng-content select="icc-layout-header"></ng-content>
-<div class="icc-main-container">
+<ng-content select="icc-layout-main">
   <ng-content select="icc-layout-sidebar"></ng-content>
   <ng-content select="icc-layout-center"></ng-content>
-</div>
+</ng-content>
 <ng-content select="icc-layout-footer"></ng-content>
