--- a/projects/icc/accordion/src/accordion.component.html
+++ b/projects/icc/accordion/src/accordion.component.html
@@ -1,7 +1,7 @@
 <cdk-accordion class="example-accordion">
   @for (item of items; track item; let index = $index) {
     <cdk-accordion-item
-      [expanded]="isExpaneded(index)"
+      [expanded]="expendIndex"
       #accordionItem="cdkAccordionItem"
       class="example-accordion-item"
       role="button"
