--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -2,7 +2,7 @@
   <icc-layout-header>
     <button [routerLink]="[gridUrl]">Grid</button>
     <button routerLink="['form']">Form</button>
-    <button routerLink="['select']">Select</button>
+    <button [routerLink]="[selectUrl]">Select</button>
     <button [routerLink]="[d3Url]">D3</button>
     Top Nav Bar
     <div (click)="toggleTheme()">Toggle Theme</div>
