--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -1,7 +1,7 @@
 <icc-layout>
   <icc-layout-header>
     <button [routerLink]="[gridUrl]">Grid</button>
-    <button routerLink="['form']">Form</button>
+    <button [routerLink]="[formUrl]">Form</button>
     <button [routerLink]="[selectUrl]">Select</button>
     <button [routerLink]="[d3Url]">D3</button>
     Top Nav Bar
