--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -6,6 +6,10 @@
     <button [routerLink]="[d3Url]">D3</button>
 
     <button (click)="toggleTheme()">Toggle Theme</button>
+
+    <div class="theme">
+      <input type="range" value="0" min="0" max="25" step="1" (input)="onChange($event)" />
+    </div>
   </icc-layout-header>
 
   <icc-layout-main>
@@ -14,3 +18,6 @@
 
   <icc-layout-footer> Footer Bar </icc-layout-footer>
 </icc-layout>
+<!--
+      <input type="range" value="0" min="0" max="100" step="1" (input)="onChange($event)" />
+      -->
