--- a/projects/icc/theme/src/themes/_dark.scss
+++ b/projects/icc/theme/src/themes/_dark.scss
@@ -1,4 +1,8 @@
 $theme: (
+  --background-color: hsl(0, 0%, 0%),
+  --text-basic-color: #adadad,
+
+  new-background-color: oklch(45.12% 0.267 268.81),
   color-primary-100: #f2f6ff,
   color-basic-100: #0f0f0f,
   color-basic-200: #191919,
