--- a/projects/icc/layout/src/_layout.component.theme.scss
+++ b/projects/icc/layout/src/_layout.component.theme.scss
@@ -5,9 +5,7 @@
   icc-layout-center,
   icc-layout-footer {
     // background-color: icc-theme(background-basic-color-1);
+    background-color: var(--app-background-color);
     color: icc-theme(text-basic-color);
-    background-color: var(--background-color);
-    // color:  var(--text-basic-color);
   }
 }
-// background-color: var(--background-color);
