--- a/projects/icc/theme/src/themes/_light.scss
+++ b/projects/icc/theme/src/themes/_light.scss
@@ -1,9 +1,5 @@
 $theme: (
-  --background-color: hsl(0, 0%, 100%),
-  //oklch(100% 0 0),
-  --text-basic-color: #4b4f54,
-
-  new-background-color: oklch(45.12% 0.267 268.81),
+  --app-background-color: hsl(0, 0%, 100%),
   color-primary-100: #f2f6ff,
   color-basic-100: #ffffff,
   color-basic-200: #fbfbfb,
