--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -8,7 +8,14 @@
     <button (click)="toggleTheme()">Toggle Theme</button>
 
     <div class="theme">
-      <input type="range" value="0" min="0" max="25" step="1" (input)="onChange($event)" />
+      <input
+        type="range"
+        [value]="rangeValue"
+        min="0"
+        [max]="themeService.rangeMax"
+        step="1"
+        (input)="onChange($event)"
+      />
     </div>
   </icc-layout-header>
 
@@ -18,6 +25,3 @@
 
   <icc-layout-footer> Footer Bar </icc-layout-footer>
 </icc-layout>
-<!--
-      <input type="range" value="0" min="0" max="100" step="1" (input)="onChange($event)" />
-      -->
