--- a/projects/icc/checkbox/src/_checkbox.component.theme.scss
+++ b/projects/icc/checkbox/src/_checkbox.component.theme.scss
@@ -1,4 +1,5 @@
 @mixin icc-checkbox-theme() {
+  /*
   icc-checkbox.ghost-checkbox {
     .icc-checkbox-container {
       border: none;
@@ -63,5 +64,5 @@
         }
       }
     }
-  }
+  }*/
 }
