--- a/projects/icc/icon/src/_icon.component.theme.scss
+++ b/projects/icc/icon/src/_icon.component.theme.scss
@@ -1,7 +1,8 @@
 @mixin icc-icon-theme() {
+  /*
   @each $status in icc-get-statuses() {
     icc-icon.status-#{$status} {
       color: icc-theme(icon-#{$status}-color);
     }
-  }
+  }*/
 }
