--- a/projects/icc/layout/src/_layout.component.theme.scss
+++ b/projects/icc/layout/src/_layout.component.theme.scss
@@ -6,6 +6,6 @@
   icc-layout-footer {
     // background-color: icc-theme(background-basic-color-1);
     background-color: var(--app-background-color);
-    color: icc-theme(text-basic-color);
+    color: icc-theme(app-text-basic-color);
   }
 }
