--- a/projects/icc/theme/src/themes/_mapping.scss
+++ b/projects/icc/theme/src/themes/_mapping.scss
@@ -1,4 +1,5 @@
 $icc-mapping: (
+  /*
   checkbox-border-color: checkbox-border-color,
   checkbox-hover-border-color: checkbox-hover-border-color,
   checkbox-disabled-border-color: checkbox-disabled-border-color,
@@ -34,4 +35,5 @@ $icc-mapping: (
   select-border-color: border-basic-color-1,
   select-text-color: text-alternative-color-1,
   select-options-background-color: background-basic-color-2,
+  */
 );
