--- a/projects/icc/button/src/_button.component.theme.scss
+++ b/projects/icc/button/src/_button.component.theme.scss
@@ -1,4 +1,5 @@
 @mixin sun-button-theme() {
+  /*
   [sun-button] {
     font-size: 0.6875rem;
     font-weight: 500;
@@ -54,5 +55,5 @@
     &.size-standard {
       height: 1.875rem;
     }
-  }
+  }*/
 }
