--- a/projects/icc/option/src/_option.component.theme.scss
+++ b/projects/icc/option/src/_option.component.theme.scss
@@ -3,20 +3,20 @@
     font-size: 0.6875rem;
 
     &.selected {
-      color: icc-theme(option-selected-text-color);
+      //color: icc-theme(option-selected-text-color);
       font-weight: bold;
     }
 
     &:hover {
       cursor: pointer;
-      background-color: icc-theme(option-hover-background-color);
+      //background-color: icc-theme(option-hover-background-color);
     }
   }
 
   .icc-option-list {
-    background: icc-theme(select-options-background-color);
-    border: 1px solid icc-theme(select-border-color);
-    color: icc-theme(select-text-color);
+    //background: icc-theme(select-options-background-color);
+    //border: 1px solid icc-theme(select-border-color);
+    //color: icc-theme(select-text-color);
 
     height: 100%;
     max-height: 320px;
