--- a/projects/icc/theme/src/_components.scss
+++ b/projects/icc/theme/src/_components.scss
@@ -2,7 +2,7 @@
 @import "../../form-field/src/form-field.component.theme";
 @import "../../form-field/src/input/input.component.theme";
 @import "../../grid/src/grid.component.theme";
-@import "../../icon/src/icon.component.theme";
+//@import "../../icon/src/icon.component.theme";
 @import "../../layout/src/layout.component.theme";
 @import "../../menu//src/menu.component.theme";
 @import "../../option//src/option.component.theme";
@@ -11,7 +11,7 @@
   @include icc-checkbox-theme();
   @include icc-form-field-theme();
   @include icc-grid-theme();
-  @include icc-icon-theme();
+  //@include icc-icon-theme();
   @include icc-layout-theme();
   @include icc-menu-theme();
   @include icc-option-theme();
