--- a/projects/icc/theme/src/themes/_dark.scss
+++ b/projects/icc/theme/src/themes/_dark.scss
@@ -1,5 +1,20 @@
 $theme: (
   --app-background-color: hsl(0, 0%, 0%),
+  app-border-basic-color: #4b4f54,
+  app-text-basic-color: #adadad,
+
+  //grid
+  icc-grid-header-background-color: #353535,
+  icc-grid-row-odd-background-color: #191919,
+  icc-grid-row-even-background-color: #282828,
+  icc-grid-row-hover-background-color: #1c2b41,
+
+  form-field-input-border-color: #353535,
+  form-field-input-bkg-color: #191919,
+  form-field-focus-border-color: #4b4f54,
+  form-field-focus-bkg-color: #353535,
+
+  /*
   color-primary-100: #f2f6ff,
   color-basic-100: #0f0f0f,
   color-basic-200: #191919,
@@ -43,10 +58,7 @@ $theme: (
   checkmark-background-color: transparent,
   checkmark-checked-background-color: transparent,
 
-  form-field-input-border-color: #353535,
-  form-field-input-bkg-color: #191919,
-  form-field-focus-border-color: #4b4f54,
-  form-field-focus-bkg-color: #353535,
+
 
   // Panel Colors
   icc-panel-border-color: #353535,
@@ -67,11 +79,7 @@ $theme: (
   text-alternative-color-red: #a94442,
   text-alternative-color-yellow: #8a6d3b,
 
-  //grid
-  icc-grid-header-background-color: #353535,
-  icc-grid-row-odd-background-color: #191919,
-  icc-grid-row-even-background-color: #282828,
-  icc-grid-row-hover-background-color: #1c2b41,
+*/
 );
 
 $icc-themes: icc-register-theme($theme, dark);
