--- a/projects/icc/layout/src/layout.component.scss
+++ b/projects/icc/layout/src/layout.component.scss
@@ -13,7 +13,7 @@
       min-height: 50px;
       justify-content: center;
       align-items: center;
-      border: 1px solid green;
+      //border: 1px solid green;
     }
 
     icc-layout-sidebar {
@@ -38,8 +38,7 @@
       min-height: 30px;
       justify-content: center;
       align-items: center;
-      border: 1px solid green;
-      //color: orange;
+      //border: 1px solid green;
     }
 
     icc-layout-main {
