--- a/projects/icc/theme/src/themes/_light.scss
+++ b/projects/icc/theme/src/themes/_light.scss
@@ -4,10 +4,11 @@ $theme: (
   app-text-basic-color: #4b4f54,
 
   //grid
-  icc-grid-header-background-color: #f6f1ed,
-  icc-grid-row-odd-background-color: #fbfbfb,
-  icc-grid-row-even-background-color: #ffffff,
-  icc-grid-row-hover-background-color: #fdeede,
+  icc-grid-header-background-color: #ededed,
+  icc-grid-row-odd-background-color: #ffffff,
+  icc-grid-row-even-background-color: #fbfbfb,
+  icc-grid-row-hover-background-color: #e5e5e5,
+  icc-grid-toolbar-background-color: #c0c0c0,
 
   form-field-input-border-color: #f6f1ed,
   form-field-input-bkg-color: #fff,
