--- a/projects/icc/option/src/_option.component.theme.scss
+++ b/projects/icc/option/src/_option.component.theme.scss
@@ -14,6 +14,7 @@
   }
 
   .icc-option-list {
+    background: cyan;
     //background: icc-theme(select-options-background-color);
     //border: 1px solid icc-theme(select-border-color);
     //color: icc-theme(select-text-color);
