--- a/projects/icc/theme/src/themes/_light.scss
+++ b/projects/icc/theme/src/themes/_light.scss
@@ -8,7 +8,7 @@ $theme: (
   icc-grid-row-odd-background-color: #ffffff,
   icc-grid-row-even-background-color: #fbfbfb,
   icc-grid-row-hover-background-color: #e5e5e5,
-  icc-grid-toolbar-background-color: #c0c0c0,
+  icc-grid-toolbar-background-color: #d2d2d2,
 
   form-field-input-border-color: #f6f1ed,
   form-field-input-bkg-color: #fff,
