--- a/projects/icc/theme/src/themes/_dark.scss
+++ b/projects/icc/theme/src/themes/_dark.scss
@@ -5,7 +5,7 @@ $theme: (
 
   //grid
   icc-grid-header-background-color: #242424,
-  icc-grid-row-odd-background-color: #191919,
+  icc-grid-row-odd-background-color: #1f1f1f,
   icc-grid-row-even-background-color: #282828,
   icc-grid-row-hover-background-color: #353535,
   icc-grid-toolbar-background-color: #404040,
