--- a/projects/icc/accordion/src/accordion.component.scss
+++ b/projects/icc/accordion/src/accordion.component.scss
@@ -1,59 +1,30 @@
 :host {
-  cdk-accordion-item {
-    // FOR scrollbar move
-    position: relative;
-    z-index: 1;
-    background-color: #eee;
-  }
-
-  .example-accordion {
+  .cdk-accordion {
     display: block;
-    max-width: 500px;
+    //max-width: 500px;
   }
 
-  .example-accordion-item {
-    display: block;
-    border: solid 1px #ccc;
-  }
-
-  .example-accordion-item + .example-accordion-item {
-    border-top: none;
-  }
-
-  .example-accordion-item-header {
+  .icc-accordion-item-header {
     display: flex;
     align-content: center;
     justify-content: space-between;
-  }
-
-  .example-accordion-item-description {
-    font-size: 0.85em;
-    color: #999;
-  }
-
-  .example-accordion-item-header {
     padding: 8px 10px;
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 
-  .example-accordion-item-header:hover {
-    cursor: pointer;
-    background-color: #eee;
+  .cdk-accordion-item {
+    position: relative;
+    z-index: 1;
   }
 
-  /*
-    .example-accordion-item-body {
-    padding: 16px 16px 16px 32px;
+  .cdk-accordion-item + .cdk-accordion-item {
+    border-top: none;
   }
 
-  .example-accordion-item:first-child {
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-}
-
-.example-accordion-item:last-child {
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
-}
-
-*/
+  ::ng-deep icc-menu-item {
+    padding-left: 10px;
+  }
 }
