--- a/projects/icc/theme/src/themes/_dark.scss
+++ b/projects/icc/theme/src/themes/_dark.scss
@@ -10,6 +10,16 @@ $theme: (
   icc-grid-row-hover-background-color: #353535,
   icc-grid-toolbar-background-color: #404040,
 
+  //menu
+  icc-menu-item-background-color: #1c1c1e,
+  icc-menu-item-hover-background-color: #2c2c2e,
+  icc-menu-item-selected-background-color: #3a3a3c,
+
+  //accordion
+  icc-accordion-item-background-color: #1c1c1e,
+  icc-accordion-item-hover-background-color: #2c2c2e,
+  icc-accordion-item-selected-background-color: #3a3a3c,
+
   form-field-input-border-color: #353535,
   form-field-input-bkg-color: #191919,
   form-field-focus-border-color: #4b4f54,
