--- a/projects/icc/theme/src/themes/_dark.scss
+++ b/projects/icc/theme/src/themes/_dark.scss
@@ -16,9 +16,9 @@ $theme: (
   icc-menu-item-selected-background-color: #3a3a3c,
 
   //accordion
-  icc-accordion-item-background-color: #1c1c1e,
+  icc-accordion-item-background-color: #404040,
   icc-accordion-item-hover-background-color: #2c2c2e,
-  icc-accordion-item-selected-background-color: #3a3a3c,
+  icc-accordion-item-expanded-background-color: #0064de,
 
   form-field-input-border-color: #353535,
   form-field-input-bkg-color: #191919,
