--- a/projects/icc/theme/src/themes/_light.scss
+++ b/projects/icc/theme/src/themes/_light.scss
@@ -16,9 +16,9 @@ $theme: (
   icc-menu-item-selected-background-color: #d1d1d6,
 
   //accordion
-  icc-accordion-item-background-color: #ffffff,
+  icc-accordion-item-background-color: #d2d2d2,
   icc-accordion-item-hover-background-color: #e5e5e9,
-  icc-accordion-item-selected-background-color: #d1d1d6,
+  icc-accordion-item-expanded-background-color: #0064de,
 
   form-field-input-border-color: #f6f1ed,
   form-field-input-bkg-color: #fff,
