--- a/projects/icc/accordion/src/_accordion.component.theme.scss
+++ b/projects/icc/accordion/src/_accordion.component.theme.scss
@@ -1,19 +1,17 @@
 @mixin icc-accordion-theme() {
   icc-accordion {
-    background-color: icc-theme(icc-menu-item-background-color);
-    color: icc-theme(app-text-basic-color);
-
     .icc-accordion-item-header {
+      background-color: icc-theme(icc-accordion-item-background-color);
+      color: icc-theme(app-text-basic-color);
       &:focus,
       &:hover {
-        background-color: icc-theme(icc-menu-item-hover-background-color);
+        background-color: icc-theme(icc-accordion-item-hover-background-color);
       }
 
-      /*
-      &.selected {
-        background-color: icc-theme(icc-menu-item-selected-background-color);
+      &.expanded {
+        background-color: icc-theme(icc-accordion-item-expanded-background-color);
         font-weight: bold;
-      }*/
+      }
     }
   }
 }
