--- a/projects/icc/theme/src/themes/_light.scss
+++ b/projects/icc/theme/src/themes/_light.scss
@@ -20,6 +20,10 @@ $theme: (
   icc-accordion-item-hover-background-color: #e5e5e9,
   icc-accordion-item-expanded-background-color: #0064de,
 
+  //option
+  option-hover-background-color: #f6f1ed,
+  option-selected-text-color: #000000,
+
   form-field-input-border-color: #f6f1ed,
   form-field-input-bkg-color: #fff,
   form-field-focus-border-color: #d0c6bc,
