--- a/projects/icc/theme/src/themes/_dark.scss
+++ b/projects/icc/theme/src/themes/_dark.scss
@@ -20,6 +20,10 @@ $theme: (
   icc-accordion-item-hover-background-color: #2c2c2e,
   icc-accordion-item-expanded-background-color: #0064de,
 
+  //option
+  option-hover-background-color: #000000,
+  option-selected-text-color: #ffffff,
+
   form-field-input-border-color: #353535,
   form-field-input-bkg-color: #191919,
   form-field-focus-border-color: #4b4f54,
