--- a/projects/icc/theme/src/themes/_light.scss
+++ b/projects/icc/theme/src/themes/_light.scss
@@ -21,6 +21,7 @@ $theme: (
   icc-accordion-item-expanded-background-color: #0064de,
 
   //option
+  icc-option-item-background-color: #fbfbfb,
   option-hover-background-color: #f6f1ed,
   option-selected-text-color: #000000,
 
