--- a/projects/icc/autocomplete/src/autocomplete.component.scss
+++ b/projects/icc/autocomplete/src/autocomplete.component.scss
@@ -1,3 +1,10 @@
+// cannot be in the host
 .autocomplete {
   width: 100%;
+}
+
+.icc-option-list {
+  height: 100%;
+  max-height: 320px;
+  overflow: auto;
 }
