--- a/projects/icc/option/src/_option.component.theme.scss
+++ b/projects/icc/option/src/_option.component.theme.scss
@@ -1,26 +1,18 @@
 @mixin icc-option-theme() {
   icc-option {
-    font-size: 0.6875rem;
+    background-color: icc-theme(icc-option-item-background-color);
+    color: icc-theme(app-text-basic-color);
+    border-top: 1px solid icc-theme(app-border-basic-color);
 
     &.selected {
-      //color: icc-theme(option-selected-text-color);
+      background-color: green;
+      color: icc-theme(icc-option-item-selected-text-color);
       font-weight: bold;
     }
 
     &:hover {
       cursor: pointer;
-      background-color: icc-theme(option-hover-background-color);
+      background-color: cyan; //icc-theme(icc-option-item-hover-background-color);
     }
-  }
-
-  .icc-option-list {
-    //background: cyan;
-    background: icc-theme(select-options-background-color);
-    //border: 1px solid icc-theme(select-border-color);
-    //color: icc-theme(select-text-color);
-
-    height: 100%;
-    max-height: 320px;
-    overflow: auto;
   }
 }
