--- a/projects/icc/theme/src/themes/_light.scss
+++ b/projects/icc/theme/src/themes/_light.scss
@@ -22,8 +22,8 @@ $theme: (
 
   //option
   icc-option-item-background-color: #fbfbfb,
-  option-hover-background-color: #f6f1ed,
-  option-selected-text-color: #000000,
+  icc-option-item-hover-background-color: #e5e5e5,
+  icc-option-item-selected-background-color: #d1d1d6,
 
   form-field-input-border-color: #f6f1ed,
   form-field-input-bkg-color: #fff,
