--- a/projects/icc/menu/src/components/menu-item/menu-item.component.scss
+++ b/projects/icc/menu/src/components/menu-item/menu-item.component.scss
@@ -7,6 +7,10 @@
   .icc-menu-item {
     padding: 0px 10px;
     width: 100%;
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 
   icc-checkbox {
@@ -20,6 +24,10 @@
   }
 
   /*
+
+      &:hover {
+      cursor: pointer;
+    }
   border-top: 1px solid gray;
   &:focus,
   &:hover {
