--- a/projects/icc/theme/src/themes/_dark.scss
+++ b/projects/icc/theme/src/themes/_dark.scss
@@ -22,8 +22,8 @@ $theme: (
 
   //option
   icc-option-item-background-color: #191919,
-  icc-option-item-hover-background-color: #000000,
-  icc-option-item-selected-text-color: #ffffff,
+  icc-option-item-hover-background-color: #353535,
+  icc-option-item-selected-background-color: #3a3a3c,
 
   form-field-input-border-color: #353535,
   form-field-input-bkg-color: #191919,
