--- a/projects/icc/theme/src/themes/_dark.scss
+++ b/projects/icc/theme/src/themes/_dark.scss
@@ -25,12 +25,23 @@ $theme: (
   icc-option-item-hover-background-color: #353535,
   icc-option-item-selected-background-color: #3a3a3c,
 
+  //form field
+  icc-form-field-input-background-color: #242424,
+  icc-form-field-focus-background-color: #191919,
+  icc-form-field-focus-border-color: green,
+
+  //#4b4f54,
+  /*
+
   form-field-input-border-color: #353535,
   form-field-input-bkg-color: #191919,
-  form-field-focus-border-color: #4b4f54,
+
   form-field-focus-bkg-color: #353535,
 
-  /*
+
+  input-border-color: #4b4f54,
+icc-grid-header-background-color
+
   color-primary-100: #f2f6ff,
   color-basic-100: #0f0f0f,
   color-basic-200: #191919,
