--- a/projects/icc/grid/src/components/column-filter/text/text-filter.component.scss
+++ b/projects/icc/grid/src/components/column-filter/text/text-filter.component.scss
@@ -6,8 +6,9 @@
 
   icc-text-field {
     width: 100%;
-    input {
+    ::ng-deep input {
       width: 100%;
+      border-bottom: none;
     }
   }
 }
